--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ python=3.7.9
 # tensorflow==2.5.0    
 # keras
 ipykernel
+jupyter
+jupyterlab
+tqdm
 scikit-learn==0.24.2
 shap==0.39.0
 matplotlib==3.4.2
