--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-pip==21.1.3 
+# pip==21.1.3 
 python=3.7.9   
-# tensorflow==2.5.0    
-# keras
-ipykernel
-jupyter
-jupyterlab
-tqdm
+# ipykernel
+jupyter==1.0.0
+tqdm==4.62.3
 scikit-learn==0.24.2
 shap==0.39.0
-matplotlib==3.4.2
-seaborn==0.11.1
+numpy==1.19.5
+# matplotlib==3.4.2
+# seaborn==0.11.1
